--- a/back/.env
+++ b/back/.env
@@ -83,3 +83,7 @@ METRICS_ENABLED=True
 CLEANUP_INTERVAL=24  # hours
 TEMP_FILE_RETENTION=7  # days
 OLD_ANALYSIS_RETENTION=30  # days
+
+# 飞书应用配置
+FEISHU_APP_ID=your_feishu_app_id_here
+FEISHU_APP_SECRET=your_feishu_app_secret_here
