--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -21,3 +21,10 @@ openai>=1.0.0
 langchain-chroma>=0.1.0
 chromadb>=0.4.0
 volcengine>=1.0.0
+
+# HTTP请求相关依赖
+requests>=2.31.0
+aiohttp>=3.8.0
+
+# 飞书开放平台SDK
+lark-oapi>=1.2.0
